EXTRA_DIST= \
	LibFlac.vcxproj \
	LibFlac.vcxproj.filters \
	LibGsm.vcxproj \
	LibGsm.vcxproj.filters \
	LibId3Tag.vcxproj \
	LibId3Tag.vcxproj.filters \
	LibLpc10.vcxproj \
	LibLpc10.vcxproj.filters \
	LibMad.vcxproj \
	LibMad.vcxproj.filters \
	LibMp3Lame.vcxproj \
	LibMp3Lame.vcxproj.filters \
	LibOgg.vcxproj \
	LibOgg.vcxproj.filters \
	LibPng.vcxproj \
	LibPng.vcxproj.filters \
	LibSndFileG72x.vcxproj \
	LibSndFileG72x.vcxproj.filters \
	LibSndFileGSM610.vcxproj \
	LibSndFileGSM610.vcxproj.filters \
	LibSndFile.vcxproj \
	LibSndFile.vcxproj.filters \
	LibSoX.vcxproj \
	LibSoX.vcxproj.filters \
	LibSpeex.vcxproj \
	LibSpeex.vcxproj.filters \
	LibVorbis.vcxproj \
	LibVorbis.vcxproj.filters \
	LibWavPack.vcxproj \
	LibWavPack.vcxproj.filters \
	LibZLib.vcxproj \
	LibZLib.vcxproj.filters \
	Readme.txt \
	SoX.sln \
	SoX.vcxproj \
	SoX.vcxproj.filters \
	Mad/config.h \
	Mad/LibMad.def \
	Mp3Lame/config.h \
	Png/inttypes.h \
	Png/pnglibconf.h \
	SndFile/config.h \
	SndFile/inttypes.h \
	SndFile/sndfile.h \
	SndFile/sys/time.h \
	SoX/soxconfig.h \
	SoX/soxstdint.h

