EXTRA_DIST= \
	LibFlac.vcxproj \
	LibGsm.vcxproj \
	LibId3Tag.vcxproj \
	LibLpc10.vcxproj \
	LibMad.vcxproj \
	LibMp3Lame.vcxproj \
	LibOgg.vcxproj \
	LibPng.vcxproj \
	LibSndFileG72x.vcxproj \
	LibSndFileGSM610.vcxproj \
	LibSndFile.vcxproj \
	LibSoX.vcxproj \
	LibSoX.vcxproj.filters \
	LibSpeex.vcxproj \
	LibVorbis.vcxproj \
	LibWavPack.vcxproj \
	LibZLib.vcxproj \
	Readme.txt \
	SoX.sln \
	SoX.vcxproj \
	Mad/config.h \
	Mad/LibMad.def \
	Mp3Lame/config.h \
	Png/inttypes.h \
	Png/pnglibconf.h \
	SndFile/config.h \
	SndFile/inttypes.h \
	SndFile/sndfile.h \
	SndFile/sys/time.h \
	SoX/soxconfig.h
