EXTRA_DIST= \
    LibFlac.vcproj \
	LibGsm.vcproj \
	LibId3Tag.vcproj \
	LibLpc10.vcproj \
	LibMad.vcproj \
	LibMp3Lame.vcproj \
	LibOgg.vcproj \
	LibPng.vcproj \
	LibSndFileG72x.vcproj \
   	LibSndFileGSM610.vcproj \
	LibSndFile.vcproj \
	LibSoX.vcproj \
	LibSpeex.vcproj \
	LibVorbis.vcproj \
	LibWavPack.vcproj \
	LibZLib.vcproj \
	Readme.txt \
	Sox.sln \
	SoX.vcproj \
	Mad/config.h \
	Mad/LibMad.def \
	Mp3Lame/config.h \
	Png/inttypes.h \
	Png/pnglibconf.h \
	SndFile/config.h \
	SndFile/inttypes.h \
	SndFile/sndfile.h \
	SndFile/sys/time.h \
	Sox/soxconfig.h
