EXTRA_DIST = \
	bisect.lua  env.lua         fib.lua      life.lua          printf.lua \
	sieve.lua   trace-calls.lua cf.lua       factorial.lua     globals.lua \
	luac.lua    README          sort.lua     trace-globals.lua echo.lua \
	fibfor.lua  hello.lua       readonly.lua table.lua         xd.lua
